--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "private": true,
   "dependencies": {
     "@okta/okta-react": "^1.2.0",
+    "acorn": "^7.2.0",
     "axios": "^0.19.0",
-    "lodash": "^4.17.13",
+    "eslint-utils": "^2.0.0",
+    "handlebars": "^4.7.6",
+    "kind-of": "^6.0.3",
+    "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
+    "minimist": "^1.2.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "serialize-javascript": "^3.0.0",
     "serve": "^11.1.0"
   },
   "scripts": {
