--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
     "minimist": "^1.2.5",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.13.1",
     "react-dom": "^16.8.6",
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.0.1",
@@ -43,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "^4.14.0"
   }
 }
